Implement AI-powered label printing system
Complete dockerized multi-agent system for generating and printing fortune phrases on Niimbot labels.

Features:
- Multi-agent architecture (Supervisor, Creative, Fun agents) using beeai-framework
- NGINX AI proxy with intelligent model routing (gpt-4o-mini/gpt-4o based on complexity)
- VLM image analysis generating creative fortune phrases (max 40 chars)
- Physical Niimbot B1 printer integration via USB
- FastAPI printer bridge service
- Interactive client for testing
- Proper word wrapping and text formatting
- Debug image saving (last_printed_label.png)

Technical:
- Docker Compose orchestration
- NGINX NJS module for model selection
- Rate limit handling with fallback
- Simple 300x100px label rendering

Cleanup:
- Removed old documentation and unused tools (monitor_nginx.py, niimprint_tool.py)
- Consolidated printer helper functions into printer_bridge.py
- Updated .gitignore to exclude API keys and logs

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,15 @@ wheels/
 
 # Logs
 *.log
+
+# Docker
+docker/supervisor/supervisor_tools_backup.py
+
+# API Keys (use templates instead)
+docker/nginx/keys/openai-key.conf
+
+# Uploaded/generated images (keep samples)
+images/upload_*.png
+images/upload_*.jpg
+images/upload_*.jpeg
+images/last_printed_label.png
